<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:id="@+id/bottom_nav"
    android:background="@color/white"
    android:paddingTop="@dimen/_3sdp"
    android:paddingBottom="@dimen/_3sdp"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:id="@+id/home"
        android:orientation="vertical">

       <ImageView
           android:layout_width="@dimen/_23sdp"
           android:layout_height="@dimen/_23sdp"
           android:src="@drawable/ic_home_black_24dp"
           android:tint="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:gravity="center"
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/_3sdp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/phone_directory"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:src="@drawable/ic_contact_phone_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_directory"
            android:gravity="center"
            android:textSize="@dimen/_11sdp"
            android:layout_marginTop="@dimen/_3sdp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:id="@+id/report_incident"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:src="@drawable/ic_report_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/report_incident"
            android:textSize="@dimen/_11sdp"
            android:layout_marginTop="@dimen/_3sdp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/lost_found"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:src="@drawable/ic_lost_n_found" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lost_and_found"
            android:gravity="center"
            android:textSize="@dimen/_11sdp"
            android:layout_marginTop="@dimen/_3sdp"/>
    </LinearLayout>

</LinearLayout>