<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".view.reportincident.RecordIncident">

    <include
        layout="@layout/header_layout"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/_50sdp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_12sdp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_48sdp"
                    android:textColor="@color/textColor"
                    android:background="@drawable/card_background"
                    android:padding="@dimen/_8sdp"
                    android:textSize="@dimen/_12sdp"
                    android:gravity="center_vertical"
                    android:id="@+id/report_type"
                    android:hint="@string/report_type"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColorHint="@color/hint_color"
                    android:minHeight="@dimen/_100sdp"
                    android:lines="1"
                    android:lineSpacingExtra="0dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_48sdp"
                    android:textColor="@color/textColor"
                    android:background="@drawable/card_background"
                    android:padding="@dimen/_8sdp"
                    android:textSize="@dimen/_12sdp"
                    android:gravity="center_vertical"
                    android:id="@+id/incident_title"
                    android:hint="@string/incident_title"
                    android:textColorHint="@color/warmgrey"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:maxLength="200"
                    android:lines="1"
                    android:lineSpacingExtra="0dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:background="@drawable/card_background"
                    android:padding="@dimen/_8sdp"
                    android:textSize="@dimen/_10sdp"
                    android:gravity="top"
                    android:id="@+id/report_message"
                    android:hint="@string/write_report_message"
                    android:textColorHint="@color/warmgrey"
                    android:minHeight="@dimen/_100sdp"
                    android:maxLength="256"
                    android:lineSpacingExtra="0dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_48sdp"
                    android:textColor="@color/textColor"
                    android:background="@drawable/card_background"
                    android:padding="@dimen/_8sdp"
                    android:textSize="@dimen/_12sdp"
                    android:gravity="center_vertical"
                    android:id="@+id/report_by"
                    android:hint="@string/reported_by"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColorHint="@color/warmgrey"
                    android:minHeight="@dimen/_100sdp"
                    android:lines="1"
                    android:lineSpacingExtra="0dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_picture"
                    android:id="@+id/add_picture_title"
                    android:textColor="@color/warmgrey"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:textSize="@dimen/_8sdp"/>

                <!--       <android.support.v7.widget.RecyclerView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_marginTop="@dimen/_4sdp"
                           android:id="@+id/picture_recycler"/> -->

                <RelativeLayout
                    android:layout_width="@dimen/_70sdp" android:layout_height="@dimen/_80sdp"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/add_image_bg">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:id="@+id/image"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/_10sdp"
                        android:gravity="center"
                        android:id="@+id/layout_add"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_add_warmgray"
                            android:scaleType="centerCrop"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Add Picture"
                            android:textColor="@color/card_border"
                            android:textSize="@dimen/_7sdp"
                            android:layout_marginTop="@dimen/_7sdp"
                            android:gravity="center"/>
                    </LinearLayout>


                </RelativeLayout>


            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <RelativeLayout
            android:layout_width        =   "wrap_content"
            android:layout_height       =   "wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="@dimen/_12sdp">
            <TextView
                android:id                  =   "@+id/btn_report"
                android:background          ="@drawable/button_background_enabled"
                style                       =   "@style/custom_button_style"
                android:gravity="center"
                android:textStyle           =   "bold"
                android:text                =   "@string/report" />

        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>