<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.searchdirectory.NewContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <include
            layout="@layout/header_layout"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/ic_account_circle_black_24dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/imageView"
                android:layout_marginTop="@dimen/_40sdp"
                android:tint="@color/colorPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_below="@id/imageView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <RelativeLayout
                        android:id              =   "@+id/firstNameLayout"
                        style                   =   "@style/text_input_relative_layout_style"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        >
                        <android.support.design.widget.TextInputLayout
                            android:id          =   "@+id/textFirstName"
                            style               =   "@style/TextInputLayoutAppearanceStyle"
                            android:textColorHint="@color/hint_color"
                            android:hint        =   "@string/first_name">
                            <EditText
                                android:id                  =   "@+id/txt_first_name"
                                style                       =   "@style/text_input_edit_text_style"
                                android:inputType           =   "text"
                                android:maxLines            =   "1" />
                        </android.support.design.widget.TextInputLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id              =   "@+id/lastNameLayout"
                        style                   =   "@style/text_input_relative_layout_style"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        >
                        <android.support.design.widget.TextInputLayout
                            android:id          =   "@+id/textLastName"
                            style               =   "@style/TextInputLayoutAppearanceStyle"
                            android:textColorHint="@color/hint_color"
                            android:hint        =   "@string/last_name">
                            <EditText
                                android:id                  =   "@+id/txt_last_name"
                                style                       =   "@style/text_input_edit_text_style"
                                android:inputType           =   "text"
                                android:maxLines            =   "1" />
                        </android.support.design.widget.TextInputLayout>
                    </RelativeLayout>
                </LinearLayout>

                <RelativeLayout
                    android:id              =   "@+id/contactNumberLayout"
                    style                   =   "@style/text_input_relative_layout_style"
                    >
                    <android.support.design.widget.TextInputLayout
                        android:id          =   "@+id/textContactNumber"
                        style               =   "@style/TextInputLayoutAppearanceStyle"
                        android:textColorHint="@color/hint_color"
                        android:hint        =   "@string/contact_number">
                        <EditText
                            android:id                  =   "@+id/txt_contact_number"
                            style                       =   "@style/text_input_edit_text_style"
                            android:inputType           =   "phone"
                            android:maxLength="10"
                            android:maxLines            =   "1" />
                    </android.support.design.widget.TextInputLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id              =   "@+id/companyName"
                    style                   =   "@style/text_input_relative_layout_style"
                    >
                    <android.support.design.widget.TextInputLayout
                        android:id          =   "@+id/textCompanyName"
                        style               =   "@style/TextInputLayoutAppearanceStyle"
                        android:textColorHint="@color/hint_color"
                        android:hint        =   "@string/company_name">
                        <EditText
                            android:id                  =   "@+id/txt_company_name"
                            style                       =   "@style/text_input_edit_text_style"
                            android:maxLines            =   "1" />
                    </android.support.design.widget.TextInputLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card_background">

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_48sdp"
                        android:layout_centerInParent="true"
                        android:spinnerMode="dialog"
                        android:id="@+id/spinner_role"
                        android:padding="@dimen/_12sdp"
                        />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="POSTING"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:textSize="@dimen/_14sdp"
                    android:id="@+id/posting"/>


            </LinearLayout>

            <RelativeLayout
                android:id                  =   "@+id/loginLayout"
                android:layout_width        =   "wrap_content"
                android:layout_height       =   "wrap_content"
                android:layout_alignParentBottom="true"
                android:padding="@dimen/_12sdp">
                <TextView
                    android:id                  =   "@+id/btn_save_contact"
                    android:background          ="@drawable/button_background_enabled"
                    style                       =   "@style/custom_button_style"
                    android:gravity="center"
                    android:textStyle           =   "bold"
                    android:text                =   "@string/save_contact" />

            </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>